--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,13 +1,14 @@
 body {
   font-family: Arial, sans-serif;
   margin: 0;
+	background-color: #f4f4f4;
 }
 
 #book {
-  background-color: #f4f4f4;
   display: flex;
   flex-direction: row;
   padding-top: 2vh;
+	padding-left: 2vh;
   justify-content: center;
   align-items: center;
 }
@@ -19,7 +20,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f4f4f4;
   transform-origin: left center;
   transform-style: preserve-3d;
   transition: transform 0.5s ease;
@@ -38,10 +38,6 @@ img {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-}
-
-.page h1 {
-  color: #333;
 }
 
 #navigation {
